--- a/about.html
+++ b/about.html
@@ -243,7 +243,7 @@
               <ul class="dropdown-menu dropdown-menu-end shadow py-0">
                 <li class="border-bottom">
                   <a
-                    href="#"
+                    href="user_profile.html"
                     class="dropdown-item d-flex align-items-center py-2"
                   >
                     <img
@@ -256,13 +256,13 @@
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item py-2" href="#"
+                  <a class="dropdown-item py-2" href="user_profile.html"
                     ><i class="bi bi-person-circle"></i
                     ><span class="ms-2">ពត៌មានផ្ទាល់ខ្លួន</span></a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item py-2" href="#"
+                  <a class="dropdown-item py-2" href="user_setting.html"
                     ><i class="bi bi-gear"></i
                     ><span class="ms-2">ការកំណត់</span></a
                   >
