--- a/clothline.html
+++ b/clothline.html
@@ -329,7 +329,7 @@
               <ul class="dropdown-menu dropdown-menu-center py-0">
                 <li class="notifi border-bottom">
                   <a
-                    href=""
+                    href="user_profile.html"
                     class="dropdown-item d-flex align-items-center py-2"
                   >
                     <img
@@ -343,13 +343,13 @@
                 </li>
 
                 <li>
-                  <a class="dropdown-item py-2" href="#">
+                  <a class="dropdown-item py-2" href="user_profile.html">
                     <i class="bi bi-person-circle"></i>
                     <span class="ms-2">ពត៌មានផ្ទាល់ខ្លួន</span>
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item py-2" href="#">
+                  <a class="dropdown-item py-2" href="user_setting.html">
                     <i class="bi bi-gear"></i>
                     <span class="ms-2">ការកំណត់</span>
                   </a>
