--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   <a class="dropdown-item" href="#">
                     <div class="py-2 d-flex align-items-center">
                       <img
-                        src="assets/img/avata/avatar-1.jpg"
+                        src="assets/image/avatar-4.jpg"
                         class="rounded-circle"
                         style="width: 40px; height: 40px"
                       />
@@ -193,7 +193,7 @@
                     <a class="dropdown-item" href="#">
                       <div class="py-2 d-flex align-items-center">
                         <img
-                          src="assets/img/avata/avatar-2.jpg"
+                          src="assets/image/avatar-4.jpg"
                           class="rounded-circle"
                           style="width: 40px; height: 40px"
                         />
@@ -251,7 +251,7 @@
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item py-2" href="#"
+                  <a class="dropdown-item py-2" href="user_profile.html"
                     ><i class="bi bi-person-circle"></i
                     ><span class="ms-2">ពត៌មានផ្ទាល់ខ្លួន</span></a
                   >
