--- a/user_setting.html
+++ b/user_setting.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="km">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Profile | Recycle</title>
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      href="assets/image/green_leaves_round_logo.png"
+      type="image/x-icon"
+    />
 
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+
     <!-- Bootstrap Icons -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
     />
+
     <!-- Font Awesome -->
-    <script
-      src="https://kit.fontawesome.com/d9ad53b8e3.js"
-      crossorigin="anonymous"
-    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+
     <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/dashboard.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
+
+    <title>ការកំណត់អ្នកប្រើប្រាស់</title>
   </head>
-  <body class="user-pf-body">
+  <body>
     <header>
       <nav class="navbar bg-nav fixed-top navbar-expand-lg border shadow">
         <div class="container">
@@ -341,283 +352,166 @@
         </div>
       </nav>
     </header>
+    <main
+      class="d-flex justify-content-center align-items-start py-5 mt-8"
+      style="min-height: 100vh; background-color: #f8f9fa"
+    >
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-10 col-lg-8">
+            <div class="card shadow-sm border-0 rounded-4">
+              <div class="card-body p-5">
+                <h4 class="mb-4 text-center fw-bold text-success">
+                  <i class="bi bi-person-circle me-2"></i>
+                  ការកំណត់អ្នកប្រើប្រាស់
+                </h4>
 
-    <main class="container-fluid mt-7 pt-4">
-      <div class="row">
-        <!-- Sidebar for md+ only -->
-        <div
-          class="col-md-3 d-none d-md-block bg-white shadow-sm p-4 vh-100 sticky-top"
-        >
-          <div class="text-center mb-4">
-            <img
-              src="assets/image/avatar-4.jpg"
-              alt="Profile Picture"
-              class="rounded-circle border border-3 border-success mb-3"
-              style="width: 120px; height: 120px"
-            />
-            <h4 class="fw-bold">John Doe</h4>
-          </div>
-
-          <!-- Sidebar Links -->
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-              <i class="bi bi-person me-2 text-success"></i>
-              <a href="#" class="text-decoration-none text-dark">Overview</a>
-            </li>
-            <li class="list-group-item">
-              <i class="bi bi-clock-history me-2 text-success"></i>
-              <a href="#activity" class="text-decoration-none text-dark"
-                >Activity</a
-              >
-            </li>
-            <li class="list-group-item">
-              <i class="bi bi-gear me-2 text-success"></i>
-              <a href="user_setting.html" class="text-decoration-none text-dark"
-                >Settings</a
-              >
-            </li>
-            <li class="list-group-item border-top">
-              <i class="bi bi-box-arrow-right me-2 text-danger"></i>
-              <a href="landing.html" class="text-decoration-none text-danger"
-                >Logout</a
-              >
-            </li>
-          </ul>
-        </div>
-
-        <!-- Main Content -->
-        <div class="col-12 col-md-9 p-4">
-          <!-- Profile Image for sm screens -->
-          <div class="d-md-none text-center mb-4">
-            <img
-              src="assets/image/avatar-4.jpg"
-              alt="Profile Picture"
-              class="rounded-circle border border-3 border-success mb-3"
-              style="width: 120px; height: 120px"
-            />
-            <h4 class="fw-bold">John Doe</h4>
-            <p class="text-muted">Web Developer | Cambodia</p>
-          </div>
-
-          <!-- Profile Information -->
-          <div class="card shadow-sm mb-4">
-            <div class="card-header bg-success text-white">
-              <h5 class="mb-0">Profile Information</h5>
-            </div>
-            <div class="card-body">
-              <div class="row mb-3">
-                <div class="col-sm-6">
-                  <strong>Email:</strong> john.doe@example.com
-                </div>
-                <div class="col-sm-6">
-                  <strong>Phone:</strong> +855 12 345 678
-                </div>
-              </div>
-              <div class="row mb-3">
-                <div class="col-sm-6">
-                  <strong>Joined:</strong> January 2024
-                </div>
-                <div class="col-sm-6">
-                  <strong>Address:</strong> Phnom Penh, Cambodia
-                </div>
-              </div>
-              <div class="text-end">
-                <a href="user_setting.html" class="btn btn-success"
-                  ><i class="fas fa-edit me-2"></i>Edit Profile</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <!-- Recent Activity -->
-          <div class="card shadow-sm mb-4" id="activity">
-            <div class="card-header bg-success text-white">
-              <h5 class="mb-0">Recent Activity</h5>
-            </div>
-            <div class="card-body">
-              <ul class="timeline list-unstyled">
-                <li class="mb-3">
-                  <span class="fw-bold">📦 Posted a new item</span
-                  ><small class="text-muted d-block">2 hours ago</small>
-                </li>
-                <li class="mb-3">
-                  <span class="fw-bold">🖼️ Updated profile picture</span
-                  ><small class="text-muted d-block">1 day ago</small>
-                </li>
-                <li class="mb-3">
-                  <span class="fw-bold">🛒 Made a purchase</span
-                  ><small class="text-muted d-block">3 days ago</small>
-                </li>
-              </ul>
-            </div>
-          </div>
-
-          <!-- Security Section -->
-          <div class="card shadow-sm mb-4" id="security">
-            <div class="card-header bg-success text-white">
-              <h5 class="mb-0">Account Security</h5>
-            </div>
-            <div class="card-body">
-              <p>
-                <i class="bi bi-shield-lock me-2 text-success"></i>Password last
-                changed: <strong>2 months ago</strong>
-              </p>
-              <p>
-                <i class="bi bi-phone me-2 text-success"></i>Two-Factor
-                Authentication: <span class="text-danger">Disabled</span>
-              </p>
-              <div class="text-end">
-                <button
-                  type="button"
-                  class="btn btn-outline-success"
-                  data-bs-toggle="modal"
-                  data-bs-target="#securityModal"
-                >
-                  Manage Security
-                </button>
-              </div>
-            </div>
-          </div>
-          <!-- Security Modal -->
-          <div
-            class="modal fade"
-            id="securityModal"
-            tabindex="-1"
-            aria-labelledby="securityModalLabel"
-            aria-hidden="true"
-          >
-            <div class="modal-dialog modal-dialog-centered modal-lg">
-              <div class="modal-content">
-                <div class="modal-header bg-success text-white">
-                  <h5 class="modal-title" id="securityModalLabel">
-                    <i class="bi bi-shield-lock me-2"></i>Device Login
+                <form>
+                  <!-- 👤 User Info -->
+                  <h5 class="text-success mb-3 fw-semibold">
+                    <i class="bi bi-person-fill me-2"></i> ព័ត៌មានអ្នកប្រើ
                   </h5>
-                  <button
-                    type="button"
-                    class="btn-close btn-close-white"
-                    data-bs-dismiss="modal"
-                    aria-label="Close"
-                  ></button>
-                </div>
-                <div class="modal-body">
-                  <p class="mb-3">
-                    These devices are currently logged in to your account:
-                  </p>
+                  <div class="row g-3">
+                    <div class="col-md-6">
+                      <label for="username" class="form-label fw-semibold"
+                        >នាមត្រកូល</label
+                      >
+                      <input
+                        type="text"
+                        id="username"
+                        class="form-control rounded-3"
+                        placeholder="បញ្ចូលនាមត្រកូល"
+                        required
+                      />
+                    </div>
+                    <div class="col-md-6">
+                      <label for="fullname" class="form-label fw-semibold"
+                        >នាមខ្លួន</label
+                      >
+                      <input
+                        type="text"
+                        id="fullname"
+                        class="form-control rounded-3"
+                        placeholder="បញ្ចូលនាមខ្លួន"
+                      />
+                    </div>
+                  </div>
 
-                  <ul class="list-group">
-                    <!-- Device 1 -->
-                    <li
-                      class="list-group-item d-flex justify-content-between align-items-center flex-column flex-md-row"
+                  <!-- Profile Picture -->
+                  <div class="mb-4 mt-3 text-center">
+                    <label
+                      for="profilePic"
+                      class="upload-box w-100 p-5 border border-2 rounded-4 bg-light d-flex flex-column align-items-center justify-content-center"
+                      style="cursor: pointer; transition: all 0.3s"
                     >
-                      <div>
-                        <strong>Windows PC</strong> - Phnom Penh, Cambodia<br />
-                        <small class="text-muted"
-                          >Last active: 1 hour ago</small
-                        >
-                      </div>
-                      <div class="mt-2 mt-md-0">
-                        <button
-                          class="btn btn-sm btn-danger"
-                          type="button"
-                          data-bs-toggle="modal"
-                          data-bs-target="#successModal"
-                        >
-                          Logout
-                        </button>
-                      </div>
-                    </li>
+                      <i
+                        class="bi bi-person-bounding-box fs-1 text-secondary"
+                      ></i>
+                      <p class="mt-2 mb-0">ចុចដើម្បីជ្រើសរូបភាព</p>
+                      <small class="text-muted">PNG, JPG, Max 2MB</small>
+                    </label>
+                    <input
+                      type="file"
+                      id="profilePic"
+                      accept="image/*"
+                      hidden
+                    />
+                  </div>
 
-                    <!-- Device 2 -->
-                    <li
-                      class="list-group-item d-flex justify-content-between align-items-center flex-column flex-md-row"
-                    >
-                      <div>
-                        <strong>iPhone 14</strong> - Phnom Penh, Cambodia<br />
-                        <small class="text-muted"
-                          >Last active: 2 days ago</small
-                        >
-                      </div>
-                      <div class="mt-2 mt-md-0">
-                        <button
-                          class="btn btn-sm btn-danger"
-                          type="button"
-                          data-bs-toggle="modal"
-                          data-bs-target="#successModal"
-                        >
-                          Logout
-                        </button>
-                      </div>
-                    </li>
-
-                    <!-- Device 3 -->
-                    <li
-                      class="list-group-item d-flex justify-content-between align-items-center flex-column flex-md-row"
-                    >
-                      <div>
-                        <strong>MacBook Pro</strong> - Phnom Penh, Cambodia<br />
-                        <small class="text-muted"
-                          >Last active: 5 days ago</small
-                        >
-                      </div>
-                      <div class="mt-2 mt-md-0">
-                        <button
-                          class="btn btn-sm btn-danger"
-                          type="button"
-                          data-bs-toggle="modal"
-                          data-bs-target="#successModal"
-                        >
-                          Logout
-                        </button>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-                <div class="modal-footer">
-                  <button
-                    type="button"
-                    class="btn btn-secondary rounded-3"
-                    data-bs-dismiss="modal"
-                  >
-                    Close
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Success Modal -->
-          <div
-            class="modal fade"
-            id="successModal"
-            tabindex="-1"
-            aria-labelledby="successModalLabel"
-            aria-hidden="true"
-          >
-            <div class="modal-dialog modal-dialog-centered">
-              <div class="modal-content border-success">
-                <div class="modal-header bg-success text-white">
-                  <h5 class="modal-title" id="successModalLabel">
-                    <i class="bi bi-check-circle me-2"></i>Success
+                  <!-- 📱 Contact Info -->
+                  <h5 class="text-success mb-3 fw-semibold">
+                    <i class="bi bi-telephone-fill me-2"></i> ទំនាក់ទំនង
                   </h5>
-                  <button
-                    type="button"
-                    class="btn-close btn-close-white"
-                    data-bs-dismiss="modal"
-                    aria-label="Close"
-                  ></button>
-                </div>
-                <div class="modal-body text-center">
-                  Device logged out successfully!
-                </div>
-                <div class="modal-footer justify-content-center">
-                  <button
-                    type="button"
-                    class="btn btn-success"
-                    data-bs-dismiss="modal"
-                  >
-                    OK
-                  </button>
-                </div>
+                  <div class="row g-3">
+                    <div class="col-md-6">
+                      <label for="phone" class="form-label fw-semibold"
+                        >លេខទូរសព្ទ</label
+                      >
+                      <input
+                        type="tel"
+                        id="phone"
+                        class="form-control rounded-3"
+                        placeholder="012 345 678"
+                      />
+                    </div>
+                    <div class="col-md-6">
+                      <label for="email" class="form-label fw-semibold"
+                        >អ៊ីម៉ែល</label
+                      >
+                      <input
+                        type="email"
+                        id="email"
+                        class="form-control rounded-3"
+                        placeholder="example@email.com"
+                      />
+                    </div>
+                    <div class="col-12">
+                      <label for="address" class="form-label fw-semibold"
+                        >អាសយដ្ឋាន</label
+                      >
+                      <textarea
+                        id="address"
+                        class="form-control rounded-3"
+                        rows="2"
+                        placeholder="បញ្ចូលអាសយដ្ឋាន"
+                      ></textarea>
+                    </div>
+                  </div>
+
+                  <!-- 🔑 Change Password -->
+                  <h5 class="mt-4 mb-3 text-success fw-semibold">
+                    <i class="bi bi-lock-fill me-2"></i> ផ្លាស់ប្តូរពាក្យសម្ងាត់
+                  </h5>
+                  <div class="row g-3">
+                    <div class="col-md-4">
+                      <label
+                        for="currentPassword"
+                        class="form-label fw-semibold"
+                        >ពាក្យសម្ងាត់បច្ចុប្បន្ន</label
+                      >
+                      <input
+                        type="password"
+                        id="currentPassword"
+                        class="form-control rounded-3"
+                        placeholder="បញ្ចូលពាក្យសម្ងាត់ចាស់"
+                      />
+                    </div>
+                    <div class="col-md-4">
+                      <label for="newPassword" class="form-label fw-semibold"
+                        >ពាក្យសម្ងាត់ថ្មី</label
+                      >
+                      <input
+                        type="password"
+                        id="newPassword"
+                        class="form-control rounded-3"
+                        placeholder="បញ្ចូលពាក្យសម្ងាត់ថ្មី"
+                      />
+                    </div>
+                    <div class="col-md-4">
+                      <label
+                        for="confirmPassword"
+                        class="form-label fw-semibold"
+                        >បញ្ជាក់ពាក្យសម្ងាត់ថ្មី</label
+                      >
+                      <input
+                        type="password"
+                        id="confirmPassword"
+                        class="form-control rounded-3"
+                        placeholder="វាយពាក្យសម្ងាត់ម្ដងទៀត"
+                      />
+                    </div>
+                  </div>
+
+                  <!-- save -->
+                  <div class="text-center mt-4">
+                    <a
+                      href="user_pin.html"
+                      class="btn btn-success btn-lg rounded-3"
+                    >
+                      <i class="bi bi-save me-2"></i> រក្សាទុកការកំណត់
+                    </a>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
