--- a/event.html
+++ b/event.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/Kropum/test.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
@@ -67,6 +66,10 @@
 .card:hover {
   transform: translateY(-8px) scale(1.03);
   box-shadow: 0 12px 25px rgba(0, 0, 0, 0.25);
+}
+.card-img-top{
+  width: 100%;
+  height: 300px;
 }
 
 </style>
@@ -495,7 +498,7 @@
             class="card-img-top" alt="event3">
           <div class="card-body">
             <h5 class="card-title fw-bold"><a href="event8.html" class="text-decoration-none text-success text-color stretched-link">ប្រកួតរូបភាពអំពី Waste of life</a></h5>
-            <p class="card-text">សកម្មភាពប្រកួតរូបភាពនេះផ្តោតលើការបង្ហាញបញ្ហាសំណល់...</p>
+            <p class="card-text">សកម្មភាពប្រកួតរូបភាពនេះផ្តោតលើការ  បង្ហាញបញ្ហាសំណល់ បង្ហាញបញ្ហាសំណល់...</p>
             <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
           </div>
         </div>
