--- a/assets/pages/dashboard.html
+++ b/assets/pages/dashboard.html
@@ -211,7 +211,7 @@
 
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/function.js"></script>
+    <script src="../js/function.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
       const ctx = document.getElementById("barChart");
