--- a/assets/pages/donate.html
+++ b/assets/pages/donate.html
@@ -190,7 +190,7 @@
                   <a class="dropdown-item" href="#">
                     <div class="py-2 d-flex align-items-center">
                       <img
-                        src="assets/image/avatar-4.jpg"
+                        src="../image/avatar-4.jpg"
                         class="rounded-circle"
                         style="width: 40px; height: 40px"
                       />
@@ -245,7 +245,7 @@
             <!-- Profile Dropdown -->
             <div class="dropdown">
               <img
-                src="assets/image/avatar-4.jpg"
+                src="../image/avatar-4.jpg"
                 alt="Profile"
                 class="avatar dropdown-toggle rounded-circle ms-2"
                 style="width: 40px; height: 40px"
@@ -259,7 +259,7 @@
                     class="dropdown-item d-flex align-items-center py-2"
                   >
                     <img
-                      src="assets/image/avatar-4.jpg"
+                      src="../image/avatar-4.jpg"
                       alt="Avatar"
                       class="rounded-circle mx-2"
                       style="width: 35px; height: 35px"
@@ -280,7 +280,7 @@
                   >
                 </li>
                 <li class="border-top">
-                  <a class="dropdown-item py-2" href="landing.html"
+                  <a class="dropdown-item py-2" href="/index.html"
                     ><i class="bi bi-box-arrow-in-left"></i
                     ><span class="ms-2">ចាកចេញ</span></a
                   >
@@ -748,6 +748,6 @@
         </div>
       </div>
     </footer>
-    <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
