--- a/assets/pages/event1.html
+++ b/assets/pages/event1.html
@@ -192,7 +192,7 @@
                   <a class="dropdown-item" href="#">
                     <div class="py-2 d-flex align-items-center">
                       <img
-                        src="assets/image/avatar-4.jpg"
+                        src="../image/avatar-4.jpg"
                         class="rounded-circle"
                         style="width: 40px; height: 40px"
                       />
@@ -247,7 +247,7 @@
             <!-- Profile Dropdown -->
             <div class="dropdown">
               <img
-                src="assets/image/avatar-4.jpg"
+                src="../image/avatar-4.jpg"
                 alt="Profile"
                 class="avatar dropdown-toggle rounded-circle ms-2"
                 style="width: 40px; height: 40px"
@@ -261,7 +261,7 @@
                     class="dropdown-item d-flex align-items-center py-2"
                   >
                     <img
-                      src="assets/image/avatar-4.jpg"
+                      src="../image/avatar-4.jpg"
                       alt="Avatar"
                       class="rounded-circle mx-2"
                       style="width: 35px; height: 35px"
@@ -282,7 +282,7 @@
                   >
                 </li>
                 <li class="border-top">
-                  <a class="dropdown-item py-2" href="landing.html"
+                  <a class="dropdown-item py-2" href="/index.html"
                     ><i class="bi bi-box-arrow-in-left"></i
                     ><span class="ms-2">ចាកចេញ</span></a
                   >
@@ -553,7 +553,7 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="assets/js/function.js"></script>
+    <script src="../js/function.js"></script>
     <script>
       const swiper = new Swiper(".swiper", {
         slidesPerView: 1,
