--- a/assets/pages/register.html
+++ b/assets/pages/register.html
@@ -136,5 +136,5 @@
     </main>
   </body>
   <!-- js  -->
-  <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </html>
