--- a/assets/pages/user_profile.html
+++ b/assets/pages/user_profile.html
@@ -185,7 +185,7 @@
                   <a class="dropdown-item" href="#">
                     <div class="py-2 d-flex align-items-center">
                       <img
-                        src="assets/image/avatar-4.jpg"
+                        src="../image/avatar-4.jpg"
                         class="rounded-circle"
                         style="width: 40px; height: 40px"
                       />
@@ -240,7 +240,7 @@
             <!-- Profile Dropdown -->
             <div class="dropdown">
               <img
-                src="assets/image/avatar-4.jpg"
+                src="../image/avatar-4.jpg"
                 alt="Profile"
                 class="avatar dropdown-toggle rounded-circle ms-2"
                 style="width: 40px; height: 40px"
@@ -254,7 +254,7 @@
                     class="dropdown-item d-flex align-items-center py-2"
                   >
                     <img
-                      src="assets/image/avatar-4.jpg"
+                      src="../image/avatar-4.jpg"
                       alt="Avatar"
                       class="rounded-circle mx-2"
                       style="width: 35px; height: 35px"
@@ -275,7 +275,7 @@
                   >
                 </li>
                 <li class="border-top">
-                  <a class="dropdown-item py-2" href="landing.html"
+                  <a class="dropdown-item py-2" href="/index.html"
                     ><i class="bi bi-box-arrow-in-left"></i
                     ><span class="ms-2">ចាកចេញ</span></a
                   >
@@ -306,7 +306,7 @@
         >
           <div class="text-center mb-4">
             <img
-              src="assets/image/avatar-4.jpg"
+              src="../image/avatar-4.jpg"
               alt="Profile Picture"
               class="rounded-circle border border-3 border-success mb-3"
               style="width: 120px; height: 120px"
@@ -352,7 +352,7 @@
           <!-- Profile Image for sm screens -->
           <div class="d-md-none text-center mb-4">
             <img
-              src="assets/image/avatar-4.jpg"
+              src="../image/avatar-4.jpg"
               alt="Profile Picture"
               class="rounded-circle border border-3 border-success mb-3"
               style="width: 120px; height: 120px"
@@ -688,6 +688,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/function.js"></script>
+    <script src="../js/function.js"></script>
   </body>
 </html>
