--- a/assets/pages/Plastic_doc01.html
+++ b/assets/pages/Plastic_doc01.html
@@ -277,7 +277,7 @@
                   >
                 </li>
                 <li class="border-top">
-                  <a class="dropdown-item py-2" href="landing.html"
+                  <a class="dropdown-item py-2" href="../../index.html"
                     ><i class="bi bi-box-arrow-in-left"></i
                     ><span class="ms-2">ចាកចេញ</span></a
                   >
