--- a/assets/pages/user_profile.html
+++ b/assets/pages/user_profile.html
@@ -275,7 +275,7 @@
                   >
                 </li>
                 <li class="border-top">
-                  <a class="dropdown-item py-2" href="landing.html"
+                  <a class="dropdown-item py-2" href="../../index.html"
                     ><i class="bi bi-box-arrow-in-left"></i
                     ><span class="ms-2">ចាកចេញ</span></a
                   >
@@ -340,7 +340,7 @@
             </li>
             <li class="list-group-item border-top">
               <i class="bi bi-box-arrow-right me-2 text-danger"></i>
-              <a href="landing.html" class="text-decoration-none text-danger"
+              <a href="../../index.html" class="text-decoration-none text-danger"
                 >ចាកចេញ</a
               >
             </li>
